--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
   <body>
     <header class="header">
       <div class="container nav">
-        <a class="logo" href="./index.html"
-          ><span class="logo-web">WEB</span>STUDIO</a
-        >
+        <a class="logo" href="./index.html"><span class="logo-web">WEB</span>STUDIO</a>
 
         <nav>
           <ul class="nav-list list">
@@ -44,14 +42,10 @@
 
         <ul class="contact-list list">
           <li class="contact-list-item">
-            <a class="contact-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="contact-list-item">
-            <a class="contact-link link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </div>
@@ -61,8 +55,7 @@
       <!--Hero-->
       <section class="hero">
         <h1 class="hero-title">
-          Effective Solutions <br />
-          for Your Business
+          Effective Solutions for Your Business
         </h1>
         <button class="hero-button" type="button">Order Service</button>
       </section>
@@ -107,7 +100,7 @@
 
       <!-- Work -->
 
-      <section class="section-no-pudding work">
+      <section class="section-no-pudding">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="list work-list">
@@ -145,7 +138,7 @@
 
       <!-- Team -->
 
-      <section class="section section-team">
+      <section class="section team-bg">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="list employee-list">
