Task-3 after check

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   <body>
     <header class="header">
       <div class="container nav">
-        <a class="logo" href="./index.html"><span class="logo-web">WEB</span>STUDIO</a>
+        <a class="logo" href="./index.html"
+          ><span class="logo-web">WEB</span>STUDIO</a
+        >
 
         <nav>
           <ul class="nav-list list">
@@ -42,10 +44,14 @@
 
         <ul class="contact-list list">
           <li class="contact-list-item">
-            <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="contact-list-item">
-            <a class="contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contact-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </div>
@@ -54,9 +60,7 @@
     <main>
       <!--Hero-->
       <section class="hero">
-        <h1 class="hero-title">
-          Effective Solutions for Your Business
-        </h1>
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="hero-button" type="button">Order Service</button>
       </section>
 
@@ -65,7 +69,7 @@
       <section class="section features">
         <div class="container">
           <h2 class="section-title visually-hidden">Features</h2>
-          <ul class=" feature-list list">
+          <ul class="feature-list list">
             <li class="feature-list-item">
               <h3 class="feature-title">Strategy</h3>
               <p class="feature-text">
@@ -105,32 +109,26 @@
           <h2 class="section-title">What are we doing</h2>
           <ul class="list work-list">
             <li class="project-list-item">
-              <div class="work-item">
-                <img
-                  src="./images/computer.jpg"
-                  alt="computer monitor"
-                  width="360"
-                />
-              </div>
+              <img
+                src="./images/computer.jpg"
+                alt="computer monitor"
+                width="360"
+              />
             </li>
             <li class="project-list-item">
-              <div class="work-item">
-                <img
-                  src="./images/phone.jpg"
-                  alt="website pages on mobile phohe"
-                  width="360"
-                />
-              </div>
+              <img
+                src="./images/phone.jpg"
+                alt="website pages on mobile phohe"
+                width="360"
+              />
             </li>
 
             <li class="project-list-item">
-              <div class="work-item">
-                <img
-                  src="./images/testing.jpg"
-                  alt="testing website on mobile phone"
-                  width="360"
-                />
-              </div>
+              <img
+                src="./images/testing.jpg"
+                alt="testing website on mobile phone"
+                width="360"
+              />
             </li>
           </ul>
         </div>
@@ -143,63 +141,54 @@
           <h2 class="section-title">Our Team</h2>
           <ul class="list employee-list">
             <li class="employee-list-item">
-              <div class="employee-card">
-                <div class="employee-photo">
-                  <img
-                    src="./images/mark.jpg"
-                    alt="Mark Guerrero"
-                    width="264"
-                  />
-                </div>
-                <div class="card-text">
-                  <h3 class="employee-name">Mark Guerrero</h3>
-                  <p class="work-position">Product Designer</p>
-                </div>
+              <img
+                class="employee-photo"
+                src="./images/mark.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
+              <div class="card-text">
+                <h3 class="employee-name">Mark Guerrero</h3>
+                <p class="work-position">Product Designer</p>
               </div>
             </li>
 
             <li class="employee-list-item">
-              <div class="employee-card">
-                <div class="employee-photo">
-                  <img src="./images/tom.jpg" alt="Tom Ford" width="264" />
-                </div>
-
-                <div class="card-text">
-                  <h3 class="employee-name">Tom Ford</h3>
-                  <p class="work-position">Frontend Developer</p>
-                </div>
+              <img
+                class="employee-photo"
+                src="./images/tom.jpg"
+                alt="Tom Ford"
+                width="264"
+              />
+              <div class="card-text">
+                <h3 class="employee-name">Tom Ford</h3>
+                <p class="work-position">Frontend Developer</p>
               </div>
             </li>
 
             <li class="employee-list-item">
-              <div class="employee-card">
-                <div class="employee-photo">
-                  <img
-                    src="./images/camila.jpg"
-                    alt="Camila Garcia"
-                    width="264"
-                  />
-                </div>
-                <div class="card-text">
-                  <h3 class="employee-name">Camila Garcia</h3>
-                  <p class="work-position">Marketing</p>
-                </div>
+              <img
+                class="employee-photo"
+                src="./images/camila.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
+              <div class="card-text">
+                <h3 class="employee-name">Camila Garcia</h3>
+                <p class="work-position">Marketing</p>
               </div>
             </li>
 
             <li class="employee-list-item">
-              <div class="employee-card">
-                <div class="employee-photo">
-                  <img
-                    src="./images/daniel.jpg"
-                    alt="Daniel Wilson"
-                    width="264"
-                  />
-                </div>
-                <div class="card-text">
-                  <h3 class="employee-name">Daniel Wilson</h3>
-                  <p class="work-position">UI Designer</p>
-                </div>
+              <img
+                class="employee-photo"
+                src="./images/daniel.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
+              <div class="card-text">
+                <h3 class="employee-name">Daniel Wilson</h3>
+                <p class="work-position">UI Designer</p>
               </div>
             </li>
           </ul>
