--- a/portfolio.html
+++ b/portfolio.html
@@ -88,8 +88,7 @@
 
           <ul class="list card-set">
             <li class="card-item">
-              <a class="link" href="#">
-                <div class="project-card">
+              <a class="link project-card" href="#">
                   <div class="card-thumb">
                     <img
                       src="./images/bankingapp.jpg"
@@ -104,13 +103,11 @@
 
                     <p class="project-type">App</p>
                   </div>
-                </div>
               </a>
             </li>
 
             <li class="card-item">
-              <a class="link" href="#">
-                <div class="project-card">
+              <a class="link project-card" href="#">
                   <div class="card-thumb">
                     <img
                       class="project-photo"
@@ -126,13 +123,11 @@
 
                     <p class="project-type">Marketing</p>
                   </div>
-                </div>
               </a>
             </li>
 
             <li class="card-item">
-              <a class="link" href="#">
-                <div class="project-card">
+              <a class="link project-card" href="#">
                   <div class="card-thumb">
                     <img
                       class="project-photo"
@@ -148,13 +143,11 @@
 
                     <p class="project-type">App</p>
                   </div>
-                </div>
               </a>
             </li>
 
             <li class="card-item">
-              <a class="link" href="#">
-                <div class="project-card">
+              <a class="link project-card" href="#">
                   <div class="card-thumb">
                     <img
                       class="project-photo"
@@ -170,13 +163,11 @@
 
                     <p class="project-type">Marketing</p>
                   </div>
-                </div>
               </a>
             </li>
 
             <li class="card-item">
-              <a class="link" href="#">
-                <div class="project-card">
+              <a class="link project-card" href="#">
                   <div class="card-thumb">
                     <img
                       class="project-photo"
@@ -192,13 +183,11 @@
 
                     <p class="project-type">Design</p>
                   </div>
-                </div>
               </a>
             </li>
 
             <li class="card-item">
-              <a class="link" href="#">
-                <div class="project-card">
+              <a class="link project-card" href="#">
                   <div class="card-thumb">
                     <img
                       class="project-photo"
@@ -214,13 +203,11 @@
 
                     <p class="project-type">Marketing</p>
                   </div>
-                </div>
               </a>
             </li>
 
             <li class="card-item">
-              <a class="link" href="#">
-                <div class="project-card">
+              <a class="link project-card" href="#">
                   <div class="card-thumb">
                     <img
                       class="project-photo"
@@ -236,13 +223,11 @@
 
                     <p class="project-type">Design</p>
                   </div>
-                </div>
               </a>
             </li>
 
             <li class="card-item">
-              <a class="link" href="#">
-                <div class="project-card">
+              <a class="link project-card" href="#">
                   <div class="card-thumb">
                     <img
                       class="project-photo"
@@ -258,13 +243,11 @@
 
                     <p class="project-type">Web Site</p>
                   </div>
-                </div>
               </a>
             </li>
 
             <li class="card-item">
-              <a class="link" href="#">
-                <div class="project-card">
+              <a class="link project-card" href="#">
                   <div class="card-thumb">
                     <img
                       class="project-photo"
@@ -280,7 +263,6 @@
 
                     <p class="project-type">Web Site</p>
                   </div>
-                </div>
               </a>
             </li>
           </ul>
